--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -9,10 +10,13 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     padding: 0.2em 0;
 }
 
+body * {
+    vertical-align: top;
+}
 /* Space out content a bit */
 body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -25,13 +29,13 @@ body {
 
 /* Custom page header */
 .header {
+    background: #88A7C6;
+    height: 100px;
 
-    .logo {
-        height: 100px;
-        width: 200px;
-        background: url("/images/logo.jpg");
-        background-size: 250px;
-        background-position: -55px;
+    img {
+        display: inline-block;
+        height: 90px;
+        width: 225px;
     }
 
 /* Make the masthead heading the same height as the navigation */
@@ -48,7 +52,6 @@ body {
 .footer {
     padding-top: 19px;
     color: #777;
-    border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
@@ -59,6 +62,8 @@ body {
 .jumbotron {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
+    background-color: #fff;
+    padding: 0;
 }
 
 .jumbotron .btn {
@@ -78,7 +83,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 730px;
+        max-width: 960px;
     }
 
     /* Remove the padding we set earlier */
@@ -90,7 +95,7 @@ body {
     }
     /* Space out the masthead */
     .header {
-        margin-bottom: 30px;
+        margin-bottom: 0px;
     }
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
@@ -98,3 +103,45 @@ body {
     }
 }
 
+.link {
+    color: #fff;
+}
+
+a {
+    color: white;
+}
+
+.head {
+    position: relative;
+    padding: 0;
+}
+
+.nav li {
+    margin-top: 10px;
+}
+.nav > li > a:hover, .nav > li > a:focus {
+    display: inline-block;
+    background-color: #88A7C6;
+    color: #fff;
+    text-decoration: underline;
+}
+
+.links {
+    display: inline-block;
+    margin-bottom: 25px;
+}
+
+.icons li {
+    display: inline-block;
+}
+
+.facebook {
+    position: absolute;
+    right: 0;
+    top: 55px;
+}
+
+.icons li img {
+    height: 25px;
+    width: 60px;
+}
