--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -118,7 +118,7 @@ body {
     .jumbotron {
         border-bottom: 0;
         background: url('/images/fabric/fabric.png');
-        height: 600px;
+        height: 560px;
     }
 }
 
@@ -192,7 +192,7 @@ body {
         
             a {
                 color: #fff;
-                margin-right: 45px;
+                margin-right: 60px;
                 font-weight: 600;
             }
 
@@ -254,8 +254,8 @@ body {
     top: 0px;
     left: 0px;
     border-radius: 2px;
-    height: 300px;
-    width: 300px;
+    height: 370px;
+    width: 312px;
     background: #fff;
     border: 1px solid #c1c1c1;
     // -webkit-transform: rotate(-13deg);
@@ -265,21 +265,23 @@ body {
 .bandpic {
     display: inline-block;
     position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 290px;
+    top: 11px;
+    left: 11px;
+    height: 348px;
     width: 290px;
     border-radius: 2px;
-    border: 0.7px solid #c1c1c1;
+    border: 1px solid #B4B4B4;
     background: url("/images/bandpic.png");
-    // -webkit-transform: rotate(-13deg);
     z-index: 6;
     background-size: 300px;
 }
 
+
 .container p {
     font-size: 12px;
     text-align: left;
+    font-weight: 600;
+    line-height: 18px;
 }
 
 .group-pic {
@@ -291,30 +293,22 @@ body {
 .band {
     display: inline-block;
     position: relative;
-    border: 1px solid #F00;
-    height: 300px;
+    height: 391px;
     width: 300px;
     float: left;
-    margin-top: 100px;
+    margin-top: 145px;
+    left: -10px;
 }
 
 .bio {
     display: inline-block;
-    border: 1px solid red;
+    margin-top: 22px;
     height: 500px;
     width: 600px;
-    margin-top: 46px;
     text-align: left;
-    padding: 8px 12px 0 0;
+
+    h2, p {
+        color: #7c7668;
+    }
 }
 
-.box {
-    background: black;
-    height: 100px;
-    width: 100px;
-}
-
-.hide {
-    height: 0px;
-    width: 0px;
-}
