--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,6 +69,8 @@ body {
 .footer {
     padding-top: 19px;
     color: #777;
+    background: #7E786C;
+    display: block;
 }
 
 .container-narrow > hr {
@@ -80,6 +82,7 @@ body {
     text-align: center;
     background: url('images/bandpic.png');
     padding: 0;
+    height: 100%;
 }
 
 .jumbotron .btn {
@@ -118,7 +121,11 @@ body {
     .jumbotron {
         border-bottom: 0;
         background: url('/images/fabric/fabric.png');
-        height: 560px;
+        height: 542px;
+
+        .shows-section {
+            background: #C8C3C0;
+        }
     }
 }
 
@@ -296,19 +303,67 @@ body {
     height: 391px;
     width: 300px;
     float: left;
-    margin-top: 145px;
+    margin-top: 88px;
     left: -10px;
 }
 
 .bio {
     display: inline-block;
     margin-top: 22px;
+    margin-left: 15px;
     height: 500px;
     width: 600px;
     text-align: left;
 
     h2, p {
         color: #7c7668;
+        font-weight: 600;
     }
 }
 
+.shows-section {
+    padding-top: 20px;
+    background: #E6E6E6;
+
+    h2, p {
+        color: #7c7668;
+        font-weight: 600;
+    }
+}
+
+.shows {
+    // border: 1px solid red;
+    width: 60%;
+    margin: 0 auto;
+
+    h3 {
+        width: 100%;
+    }
+
+    ul {
+        padding-left: 0;
+    
+        li {
+            list-style-type: none;
+            width: 475px;
+            display: inline-block;
+            text-align: left;
+            border-bottom: 1.8px dashed #838383;
+
+
+            h3 {
+                color: #7C7668;
+                display: inline-block;
+                width: 200px;
+                margin-top: 9px;
+                text-align: left;
+            }
+
+            span {
+                color: #B78139;
+                font-weight: 600;
+            }
+
+        }
+    }
+}
