--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -490,7 +490,7 @@ body {
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url("../images/weddingwire.png");
+            background: url("/images/weddingwire.png");
             background-size: 119%;
             background-position: -8px -9px;
         } 
@@ -500,7 +500,7 @@ body {
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url("../images/gigsalad.png");
+            background: url("/images/gigsalad.png");
             background-size: 143%;
             background-position: -17px -10px;
         }
@@ -510,7 +510,7 @@ body {
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url("../images/gigmasters.png");
+            background: url("/images/gigmasters.png");
             background-size: 101%;
             background-position: 1px 0px;
         }
@@ -520,7 +520,7 @@ body {
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url("../images/cdbaby.png");
+            background: url("/images/cdbaby.png");
             background-size: 106%;
             background-position: -3px -3px;
         }
@@ -530,7 +530,7 @@ body {
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url('../images/rn.png');
+            background: url('/images/rn.png');
             background-size: 119%;
             background-position: -8px -8px;
         }
