fixing typos and changing ww to fb

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -485,12 +485,12 @@ body {
             margin: 0px 15px;
         }
        
-        .wedding-wire {
+        .fb {
             border-radius: 2px;
             border: 4px solid #808080;
             height: 90px;
             width: 90px;
-            background: url("/images/weddingwire.png");
+            background: url("/images/fb.png");
             background-size: 119%;
             background-position: -8px -9px;
         } 
