changed background image

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,7 +40,7 @@ body {
 
 /* Custom page header */
 .header {
-    background: url('/images/instruments.jpg')no-repeat center center;
+    background: url('/images/instruments.png')no-repeat center center;
     background-size: 100%;
     background-position: 0 -350px;
     height: 400px;
