trying to retstructure for correct build

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -558,7 +558,7 @@ body {
 }
 
 .livestream {
-    background: url("../images/livestream.png");
+    background: url("/images/livestream.png");
     height: 30px;
     width: 140px;
     display: inline-block;
